[package]
name = "paper_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex = "0.4.3"
elliptic-curve = "=0.13.8"
secp256k1 = { version = "0.29", features = ["rand"] }
ripemd = "0.1.3"
num_cpus = "1.13.1"
clap = { version = "4.5.20", features = ["derive"] }
sha2 = "0.10.8"
image = "0.25.5"
rusttype = "0.9.3"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
rayon = "1.10.0"



